--- a/compare/index.html
+++ b/compare/index.html
@@ -226,7 +226,7 @@
         <h4>Community</h4>
         <ul>
           <li><a href="https://github.com/smith-and-web/kindling" target="_blank" rel="noopener">GitHub</a></li>
-          <li><a href="https://discord.gg/CNcS7WPR" target="_blank" rel="noopener">Discord</a></li>
+          <li><a href="https://discord.gg/g7bkj4kY8w" target="_blank" rel="noopener">Discord</a></li>
           <li><a href="https://twitter.com/KindlingWriter" target="_blank" rel="noopener">Twitter/X</a></li>
           <li><a href="https://bsky.app/profile/kindlingwriter.com" target="_blank" rel="noopener">Bluesky</a></li>
         </ul>
