--- a/download/index.html
+++ b/download/index.html
@@ -89,6 +89,11 @@
         <span class="label">Windows</span>
         <span class="subtext">Windows 10+ — .msi installer</span>
       </a>
+      <a href="https://github.com/smith-and-web/kindling/releases/latest/download/Kindling_1.0.0-beta_amd64.AppImage" class="download-card-large" data-platform="linux" onclick="trackDownload('linux')">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.504 0c-.155 0-.315.008-.48.021-4.226.333-3.105 4.807-3.17 6.298-.076 1.092-.3 1.953-1.05 3.02-.885 1.051-2.127 2.75-2.716 4.521-.278.832-.41 1.684-.287 2.489a.424.424 0 00-.11.135c-.26.268-.45.6-.663.839-.199.199-.485.267-.797.4-.313.136-.658.269-.864.68-.09.189-.136.394-.132.602 0 .199.027.4.055.536.058.399.116.728.04.97-.249.68-.28 1.145-.106 1.484.174.334.535.47.94.601.81.2 1.91.135 2.774.6.926.466 1.866.67 2.616.47.526-.116.97-.464 1.208-.946.587-.003 1.23-.269 2.26-.334.699-.058 1.574.267 2.577.2.025.134.063.198.114.333l.003.003c.391.778 1.113 1.132 1.884 1.071.771-.06 1.592-.536 2.257-1.306.631-.765 1.683-1.084 2.378-1.503.348-.199.629-.469.649-.853.023-.4-.2-.811-.714-1.376v-.097l-.003-.003c-.17-.2-.25-.535-.338-.926-.085-.401-.182-.786-.492-1.046h-.003c-.059-.054-.123-.067-.188-.135a.357.357 0 00-.19-.064c.431-1.278.264-2.55-.173-3.694-.533-1.41-1.465-2.638-2.175-3.483-.796-1.005-1.576-1.957-1.56-3.368.026-2.152.236-6.133-3.544-6.139zm.529 3.405h.013c.213 0 .396.062.584.198.19.135.33.332.438.533.105.259.158.459.166.724 0-.02.006-.04.006-.06v.105a.086.086 0 01-.004-.021l-.004-.024a1.807 1.807 0 01-.15.706.953.953 0 01-.213.335.71.71 0 00-.088-.042c-.104-.045-.198-.064-.284-.133a1.312 1.312 0 00-.22-.066c.05-.06.146-.133.183-.198.053-.128.082-.264.088-.402v-.02a1.21 1.21 0 00-.061-.4c-.045-.134-.101-.2-.183-.333-.084-.066-.167-.132-.267-.132h-.016c-.093 0-.176.03-.262.132a.8.8 0 00-.205.334 1.18 1.18 0 00-.09.4v.019c.002.089.008.179.02.267-.193-.067-.438-.135-.607-.202a1.635 1.635 0 01-.018-.2v-.02a1.772 1.772 0 01.15-.768c.082-.22.232-.406.43-.534a.985.985 0 01.594-.2z"/></svg>
+        <span class="label">Linux</span>
+        <span class="subtext">x86_64 — .AppImage</span>
+      </a>
     </div>
 
     <p class="download-note" style="margin-top: 16px;">All downloads from <a href="https://github.com/smith-and-web/kindling/releases">GitHub Releases</a></p>
@@ -110,6 +115,7 @@
     <ul class="sysreq-list">
       <li>macOS 12 (Monterey) or later</li>
       <li>Windows 10 or later</li>
+      <li>Linux (x86_64, AppImage)</li>
       <li>~50MB disk space</li>
       <li>No internet connection required after download</li>
     </ul>
@@ -152,7 +158,7 @@
         <h4>Community</h4>
         <ul>
           <li><a href="https://github.com/smith-and-web/kindling" target="_blank" rel="noopener">GitHub</a></li>
-          <li><a href="https://discord.gg/CNcS7WPR" target="_blank" rel="noopener">Discord</a></li>
+          <li><a href="https://discord.gg/g7bkj4kY8w" target="_blank" rel="noopener">Discord</a></li>
           <li><a href="https://twitter.com/KindlingWriter" target="_blank" rel="noopener">Twitter/X</a></li>
           <li><a href="https://bsky.app/profile/kindlingwriter.com" target="_blank" rel="noopener">Bluesky</a></li>
         </ul>
