--- a/open-source/index.html
+++ b/open-source/index.html
@@ -103,7 +103,7 @@
       <a href="https://github.com/smith-and-web/kindling" class="download-btn" target="_blank" rel="noopener">GitHub Repository</a>
       <a href="https://github.com/smith-and-web/kindling/issues" class="download-btn secondary" target="_blank" rel="noopener">GitHub Issues</a>
       <a href="https://github.com/smith-and-web/kindling/discussions" class="download-btn secondary" target="_blank" rel="noopener">GitHub Discussions</a>
-      <a href="https://discord.gg/CNcS7WPR" class="download-btn secondary" target="_blank" rel="noopener">Discord Server</a>
+      <a href="https://discord.gg/g7bkj4kY8w" class="download-btn secondary" target="_blank" rel="noopener">Discord Server</a>
     </div>
     <div class="callout">You don't need to be a developer to contribute. Bug reports, feature ideas, and spreading the word all help.</div>
   </section>
@@ -131,7 +131,7 @@
         <h4>Community</h4>
         <ul>
           <li><a href="https://github.com/smith-and-web/kindling" target="_blank" rel="noopener">GitHub</a></li>
-          <li><a href="https://discord.gg/CNcS7WPR" target="_blank" rel="noopener">Discord</a></li>
+          <li><a href="https://discord.gg/g7bkj4kY8w" target="_blank" rel="noopener">Discord</a></li>
           <li><a href="https://twitter.com/KindlingWriter" target="_blank" rel="noopener">Twitter/X</a></li>
           <li><a href="https://bsky.app/profile/kindlingwriter.com" target="_blank" rel="noopener">Bluesky</a></li>
         </ul>
