Minor tweaks and image additions

--- a/features/index.html
+++ b/features/index.html
@@ -72,30 +72,42 @@
     <h1>Everything you need to go from outline to draft</h1>
     <p class="page-hero-subtext">Kindling turns your existing outline into a scaffolded writing space — scene beats as expandable prompts, character details at your fingertips, and export back to the tools you already use.</p>
     <a href="/download/" class="download-btn">Download Kindling — Free</a>
-    <div class="visual-placeholder" style="margin-top: 32px;">
-      Screenshot: scaffolded writing view with scene beats expanded
-    </div>
+    <img src="../assets/demo-1.gif" alt="Scaffolded writing view with scene beats expanded" style="margin-top: 32px; max-width: 100%; height: auto; border-radius: 12px;">
   </section>
 
   <section class="content-section">
     <h2>Your outline, inside your writing space</h2>
     <p>Scene beats from Plottr, yWriter, or Markdown outlines appear as expandable prompt sections in the drafting view. Writers click to reveal a beat, then compose prose directly into that section. No more blank pages — your preparation is right there with you.</p>
-    <div class="visual-placeholder">Annotated screenshot: collapsed beats → one expanded with prose being written into it</div>
+    <img src="../assets/scene-panel.png" alt="Collapsed beats with one expanded showing prose being written into it" style="max-width: 100%; height: auto; border-radius: 12px; margin: 24px 0;">
     <div class="callout">No more switching between your outline doc and a blank page.</div>
   </section>
 
   <section class="content-section alt">
     <h2>The right details, right when you need them</h2>
     <p>Characters and locations tagged in your scene automatically surface in a side panel. Physical descriptions, relationships, key notes — all visible while you write, without searching through separate documents. Pin frequently-used references. Unpin when you're done.</p>
-    <div class="visual-placeholder">Screenshot: reference panel showing a character card alongside the writing area</div>
+    <img src="../assets/references-panel.png" alt="Reference panel showing a character card alongside the writing area" style="max-width: 100%; height: auto; border-radius: 12px; margin: 24px 0;">
     <div class="callout">Your character had green eyes in chapter 3. Kindling makes sure they still do in chapter 30.</div>
   </section>
 
   <section class="content-section">
     <h2>Works with your existing tools</h2>
-    <p>Import from Plottr (.pltr), yWriter (.yw7), or Markdown outlines. Write your scenes in Kindling's scaffolded view. Export finished work to DOCX or Markdown. Kindling fits into your workflow — it doesn't replace it.</p>
-    <div class="visual-placeholder">Flow diagram: [Plottr / yWriter / Markdown] → Kindling → [DOCX / Markdown]</div>
-    <p><strong>Supported formats:</strong> .pltr, .yw7, .md — Import. DOCX, .md — Export.</p>
+    <p>Import from Plottr (.pltr), yWriter (.yw7), Obsidian Longform, or Markdown outlines. Write your scenes in Kindling's scaffolded view. Export finished work to DOCX, Markdown, or Obsidian Longform. Kindling fits into your workflow — it doesn't replace it.</p>
+    <div class="flow-diagram">
+      <div class="flow-node">
+        <span class="flow-label">Import</span>
+        <span class="flow-formats">Plottr · yWriter · Obsidian Longform · Markdown</span>
+      </div>
+      <span class="flow-arrow" aria-hidden="true">↓</span>
+      <div class="flow-node flow-node-center">
+        <span class="flow-label">Kindling</span>
+        <span class="flow-formats">Write & edit</span>
+      </div>
+      <span class="flow-arrow" aria-hidden="true">↓</span>
+      <div class="flow-node">
+        <span class="flow-label">Export</span>
+        <span class="flow-formats">DOCX · Markdown · Obsidian Longform</span>
+      </div>
+    </div>
   </section>
 
   <section class="content-section alt">
