--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <style>
     /* Page-specific styles only. Base styles in /assets/site.css */
 
-    /* Hero Section */
+    /* Hero Section - compact for above-the-fold CTA at 900-1000px viewport */
     .hero {
       min-height: auto;
       display: flex;
@@ -57,7 +57,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 100px 24px 80px;
+      padding: 72px 24px 48px;
       position: relative;
       overflow: hidden;
     }
@@ -78,51 +78,58 @@
     .hero-content {
       position: relative;
       z-index: 1;
-      max-width: 720px;
+      max-width: 960px;
     }
 
     .logo {
-      width: 180px;
+      width: 150px;
       height: auto;
-      margin-bottom: 20px;
+      margin-bottom: 12px;
     }
 
     .hero h1 {
       font-family: 'Space Grotesk', sans-serif;
-      font-size: clamp(40px, 8vw, 64px);
+      font-size: clamp(36px, 7vw, 56px);
       font-weight: 600;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
       letter-spacing: -0.02em;
     }
 
     .tagline {
       font-family: 'Space Grotesk', sans-serif;
-      font-size: clamp(24px, 4vw, 36px);
+      font-size: clamp(20px, 3.5vw, 30px);
       font-weight: 500;
       color: var(--ember-orange);
-      margin-bottom: 16px;
+      margin-bottom: 10px;
     }
 
     .open-source-badge {
       display: inline-block;
       font-family: 'Space Grotesk', sans-serif;
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 500;
       color: var(--success);
       background: rgba(45, 156, 107, 0.15);
       border: 1px solid rgba(45, 156, 107, 0.3);
-      padding: 6px 16px;
+      padding: 5px 14px;
       border-radius: 100px;
-      margin-bottom: 20px;
+      margin-bottom: 14px;
       letter-spacing: 0.02em;
     }
 
     .hero-description {
-      font-size: 18px;
+      font-size: 17px;
       color: var(--text-secondary);
+      max-width: 640px;
+      margin: 0 auto 16px;
+      line-height: 1.65;
+    }
+
+    .hero .callout {
+      margin: 0 auto 20px;
       max-width: 560px;
-      margin: 0 auto 32px;
-      line-height: 1.7;
+      padding: 14px 20px;
+      font-size: 16px;
     }
 
     .signup-container h2 {
@@ -144,16 +151,16 @@
     }
 
     .hero .social-links {
-      margin-top: 24px;
+      margin-top: 16px;
     }
 
     /* Download Card */
     .download-card {
-      margin-top: 48px;
+      margin-top: 24px;
       background: var(--surface);
       border: 1px solid var(--surface-light);
       border-radius: 16px;
-      padding: 32px;
+      padding: 24px 28px;
       text-align: center;
       max-width: 560px;
       margin-left: auto;
@@ -168,9 +175,9 @@
     }
 
     .download-card > p {
-      font-size: 16px;
+      font-size: 15px;
       color: var(--text-secondary);
-      margin-bottom: 24px;
+      margin-bottom: 16px;
     }
 
     .beta-badge {
@@ -526,6 +533,7 @@
       <p class="hero-description">
         Your outline shouldn't disappear when you start writing. Kindling is a desktop writing app that keeps your scene beats, character notes, and story structure visible while you draft. Available for Windows, macOS, and Linux.
       </p>
+      <div class="callout">AI-free. No account required. Works completely offline.</div>
 
       <!-- Download CTA -->
       <div id="download" class="download-card">
@@ -579,7 +587,10 @@
     </div>
   </section>
 
-  <!-- Email Signup Section -->
+  <!-- Demo / Email Signup Section -->
+  <div style="padding: 48px 24px 0; text-align: center;">
+    <img src="assets/demo-1.gif" alt="Kindling scaffolded writing view with scene beats" style="max-width: 100%; height: auto; border-radius: 12px;">
+  </div>
   <section class="signup-section">
     <div class="signup-section-container">
       <h2>Get Updates</h2>
