--- a/privacy/index.html
+++ b/privacy/index.html
@@ -74,13 +74,18 @@
   </section>
 
   <article class="content-section privacy-content">
-    <h2>The App</h2>
-    <p>Kindling is a desktop application that runs entirely on your computer. Here's what that means for your privacy:</p>
-    <p><strong>Your manuscripts never leave your machine.</strong> Kindling stores all project data locally in SQLite files on your computer. There is no cloud sync, no server-side storage, and no remote database. Your drafts, outlines, character notes, and scene beats exist only where you put them.</p>
-    <p><strong>No account required.</strong> You don't need to create an account, provide an email address, or log in to use Kindling. Download it, open it, and start writing.</p>
-    <p><strong>No analytics or telemetry in the app.</strong> Kindling does not phone home. It doesn't track your word count, your writing habits, your session length, or anything else. The app makes zero network requests during normal use.</p>
-    <p><strong>No AI. Period.</strong> Kindling does not use artificial intelligence to analyze, suggest, rewrite, or interact with your writing in any way. There are no language models running in the background. Your words are yours alone.</p>
-    <p><strong>Fully offline.</strong> Kindling works without an internet connection. If you disconnect your computer from the internet entirely, every feature still works exactly the same.</p>
+    <h2>Kindling Desktop Application</h2>
+    <p>The Kindling desktop application:</p>
+    <ul>
+      <li>Does not collect any personal information</li>
+      <li>Does not transmit data to any servers</li>
+      <li>Does not include analytics, telemetry, or usage tracking</li>
+      <li>Does not require an account or registration</li>
+      <li>Does not access the internet for any purpose</li>
+      <li>Stores all project data locally on your computer as SQLite database files</li>
+      <li>Does not share data with any third parties</li>
+    </ul>
+    <p>Your project files, writing, and personal data never leave your computer. Kindling operates entirely offline and has no capability to access, read, or transmit your data. There is no cloud sync, no server-side storage, and no remote database. The app makes zero network requests during normal use. Kindling does not use AI to analyze or interact with your writing in any way.</p>
   </section>
 
   <section class="content-section alt privacy-content">
@@ -155,6 +160,7 @@
         <ul>
           <li><a href="https://opensource.org/licenses/MIT">MIT License</a></li>
           <li><a href="/privacy/">Privacy Policy</a></li>
+          <li><a href="/terms/">Terms of Service</a></li>
         </ul>
       </div>
     </div>
