--- a/features/index.html
+++ b/features/index.html
@@ -75,7 +75,9 @@
     <h1>Everything you need to go from outline to draft</h1>
     <p class="page-hero-subtext">Kindling turns your existing outline into a scaffolded writing space — scene beats as expandable prompts, character details at your fingertips, and export back to the tools you already use.</p>
     <a href="/download/" class="download-btn">Download Kindling — Free</a>
-    <img src="../assets/demo-1.gif" alt="Scaffolded writing view with scene beats expanded" width="1000" height="844" loading="lazy" decoding="async" style="margin-top: 32px; max-width: 100%; height: auto; border-radius: 12px;">
+    <video autoplay loop muted playsinline preload="none" width="804" height="556" style="margin-top: 32px; max-width: 100%; height: auto; border-radius: 12px;" aria-label="Scaffolded writing view with scene beats expanded">
+      <source src="../assets/demo-2.mp4" type="video/mp4">
+    </video>
   </section>
 
   <section class="content-section">
