--- a/index.html
+++ b/index.html
@@ -591,7 +591,9 @@
 
   <!-- Demo / Email Signup Section -->
   <div style="padding: 48px 24px 0; text-align: center;">
-    <img src="assets/demo-1.gif" alt="Kindling scaffolded writing view with scene beats" width="1000" height="844" loading="lazy" decoding="async" style="max-width: 100%; height: auto; border-radius: 12px;">
+    <video autoplay loop muted playsinline preload="none" width="804" height="556" style="max-width: 100%; height: auto; border-radius: 12px;" aria-label="Kindling scaffolded writing view with scene beats">
+      <source src="assets/demo-2.mp4" type="video/mp4">
+    </video>
   </div>
   <section class="signup-section">
     <div class="signup-section-container">
